changes in the code

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -16,14 +16,14 @@
             <div id="quiz-menu" class="hidden">
                 <h2>Select Quiz</h2>
                 <select id="quiz-select">
-                    <option value="" disabled selected>Select a subject</option>
+                    <option value="" disabled selected>Select a Quiz</option>
                     <option value="python">Python</option>
                     <option value="database">Database</option>
                     <option value="cloud">Cloud Computing</option>
                     <option value="security">Security</option>
-                  <option value="database">Operating System</option>
+                  <option value="database">OS</option>
                   <option value="database">Computer Network</option>
-                  <option value="database">Artificial Intelligence</option>
+                  <option value="database">AI</option>
                   <option value="database">UI/UX</option>
                   <option value="database">Data Science</option>
                   <option value="database">DSA</option>
