--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -21,12 +21,12 @@
                     <option value="database">Database</option>
                     <option value="cloud">Cloud Computing</option>
                     <option value="security">Security</option>
-                  <option value="database">OS</option>
-                  <option value="database">Computer Network</option>
-                  <option value="database">AI</option>
-                  <option value="database">UI/UX</option>
-                  <option value="database">Data Science</option>
-                  <option value="database">DSA</option>
+                  <option value="OS">OS</option>
+                  <option value="CN">Computer Network</option>
+                  <option value="AI">AI</option>
+                  <option value="UI">UI/UX</option>
+                  <option value="datascience">Data Science</option>
+                  <option value="DSA">DSA</option>
                 </select>
                 <button id="start-selected-quiz" onclick="startSelectedQuiz()">Start Selected Quiz</button>
             </div>
