--- a/quizo.html
+++ b/quizo.html
@@ -208,7 +208,7 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" href="#"><i class="fas fa-info-circle"></i> About </a>
-                        <a class="nav-link" href="#"><i class="fas fa-box-open"></i> Subjects |</a>
+                        <a class="nav-link" href="#"><i class="fas fa-box-open"></i> Mission |</a>
                         <div class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="teamDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fas fa-users"></i> Team: BugSquashers |
