Add feature registration

--- a/quizo.html
+++ b/quizo.html
@@ -223,7 +223,7 @@
                             </ul>
                         </div>
                         <a class="nav-link" href="demotest.html"><i class="fas fa-vial"></i> Demo Test |</a>
-                        <a class="nav-link" href="#"><i class="fas fa-sign-in-alt"></i>     Register |</a>
+                        <a class="nav-link" href="register.html"><i class="fas fa-sign-in-alt"></i>     Register |</a>
                     </div>
                 </div>
             </div>
