quiz.html added.

--- a/questions.html
+++ b/questions.html
@@ -46,8 +46,8 @@
         <br><br>
         <section>
             <h2>Delete Question</h2>
-            <input type="text" id="delete_quiz_id" placeholder="Enter Quiz ID for Deletion">
-            <input type="text" id="delete_question_id" placeholder="Enter Question ID to Delete">
+            <input type="text" id="quiz_id" placeholder="Enter Quiz ID for Deletion">
+            <input type="text" id="question_id" placeholder="Enter Question ID to Delete">
             <button onclick="deleteQuestion()">Delete Question</button>
         </section>
     </div>
