--- a/teacher-sign-in.html
+++ b/teacher-sign-in.html
@@ -36,6 +36,7 @@
         <button onclick="window.location.href='quizo.html';">Go to Main Homepage</button><br>
         <!-- Add this button somewhere in your main dashboard -->
         <button onclick="window.location.href='questions.html';">Manage Questions</button>
+        <button onclick="window.location.href='quiz.html';">Get Quiz</button>
         <div id="message" style="color: green; margin-bottom: 20px;"></div>
         <br><br><br>
 
@@ -88,7 +89,7 @@
                 })
                 .catch(error => console.error('Error fetching quizzes:', error));
         }
-        function addQuiz() {
+    function addQuiz() {    
     const quizData = {
         quiz_id: document.getElementById('quiz_id').value,
         title: document.getElementById('title').value,
@@ -107,17 +108,24 @@
     .then(response => response.json())  // Convert response to JSON
     .then(data => {
         if (data && data.success) {  // Check if the response has a success indicator
-            alert('Quiz successfully added!');
+            showMessage(`Quiz "${quizData.title}" successfully added in QuizBS!`); // Show success message with the title
             fetchQuizzes(); // Refresh the list
         } else {
-            alert('Failed to add quiz: ' + (data.message || 'Unknown error'));
+            showMessage(`Failed to add quiz: ${data.message || 'Unknown error'}`, false); // Show failure message
         }
     })
     .catch(error => {
-        alert('Error adding quiz: ' + error.message);
+        showMessage(`Error adding quiz: ${error.message}`, false); // Show error message
         console.error('Error adding quiz:', error);
     });
 }
+
+function showMessage(message, isSuccess = true) {
+    const messageDiv = document.getElementById('message');
+    messageDiv.textContent = message;
+    messageDiv.style.color = isSuccess ? 'green' : 'red'; // Change text color based on success or failure
+}
+
 
         function deleteSelectedQuiz() {
             const deleteDropdown = document.getElementById('deleteDropdown');
