--- a/teacher-sign-in.html
+++ b/teacher-sign-in.html
@@ -37,8 +37,11 @@
         <!-- Add this button somewhere in your main dashboard -->
         <button onclick="window.location.href='questions.html';">Manage Questions</button>
         <button onclick="window.location.href='quiz.html';">Get Quiz</button>
+        <button onclick="window.location.href='deletequiz.html';">Delete Quiz</button>
         <div id="message" style="color: green; margin-bottom: 20px;"></div>
         <br><br><br>
+
+        
 
         <section>
             <h2>Create Quiz</h2>
