Answer choices locked after submission

--- a/student-sign-in.html
+++ b/student-sign-in.html
@@ -112,10 +112,10 @@
     </style>
 </head>
 <body>
-    <h1>QQBS Student Dashboard</h1>
+    <button onclick="window.location.href='quizo.html';">Go to homepage</button>
+    <br><br>
+    <h1>QUIZO-STUDENT DASHBOARD</h1>
     <div class="container">
-        <button onclick="window.location.href='quizo.html';">Go to homepage</button>
-        <br><br>
         <section>
             <h2>Select Quiz</h2>
             <select id="quizDropdown">
